<resources>
    <string name="app_name">HW1_Daniel_Gerbi</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="toggle_string">Sensors:  </string>
    <string name="startGame_string">Start Game</string>
    <string name="string_exit">Exit</string>
    <string name="string_speed">Speed :</string>
    <string name="string_setting">Setting</string>
    <string name="string_cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="string_gameName">Sweet Sprint</string>
    <string name="string_send">send</string>
    <string name="please_enter_your_name">Please enter your name :</string>
    <string name="score_string_text">Score: 100</string>
    <string name="hint">Please Enter Location</string>
    <string name="send">Send</string>
    <string name="string_records">Records</string>
    <string name="title">title</string>
    <string-array name="Speed">
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
    </string-array>
</resources>